--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.79"
+itertools = "0.12.0"
 rand = "0.8.5"
 scylla = "0.11.1"
 serde = { version = "1.0.196", features = ["derive"]}
