--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.79"
+indexmap = { version = "2.2.1", features = ["serde"]}
 rand = "0.8.5"
 scylla = "0.11.1"
 serde = { version = "1.0.196", features = ["derive"]}
 serde_json = "1.0.113"
+sha2 = "0.10.8"
 tokio = { version = "1.35.1", features = ["full"] }
