--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 futures-util ={ version = "0.3.30", features = ["async-await", "sink", "std"] }
 indexmap = { version = "2.2.1", features = ["serde"]}
+lazy_static = "1.4.0"
 rand = "0.8.5"
 scylla = "0.11.1"
 serde = { version = "1.0.196", features = ["derive"]}
