--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4.33"
 futures-util ={ version = "0.3.30", features = ["async-await", "sink", "std"] }
 indexmap = { version = "2.2.1", features = ["serde"]}
 lazy_static = "1.4.0"
