--- a/.github/workflows/release-linux.yml
+++ b/.github/workflows/release-linux.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: DVPS-Ptero
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
       - name: Compile
